// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicButton Should render BasicButton Default 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with Icon 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with Icon and IconPosition end 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with Icon and IconPosition end and fullWidth 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer w-full bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with Icon and IconPosition end and fullWidth and isLoading 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-wait w-full bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with Icon and IconPosition end and fullWidth and isLoading and className=custom-class 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-wait w-full bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300 opacity-50"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with Icon and IconPosition start 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with variant=primary 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer bg-solid-coral-700 text-solid-slate-50 enabled:hover:bg-solid-coral-800 enabled:active:bg-solid-coral-900 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with variant=secondary 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer border-75 text-solid-coral-700 enabled:hover:bg-solid-coral-100 enabled:active:bg-solid-coral-200 border-solid-coral-700 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BasicButton Should render BasicButton with variant=tertiary 1`] = `
<div>
  <button
    class="transition-colors duration-150 ease-in-out font-bold disabled:opacity-600 disabled:cursor-not-allowed flex items-center justify-center cursor-pointer underline text-solid-coral-700 enabled:hover:bg-solid-coral-100 enabled:active:bg-solid-coral-200 rounded-600 text-body-sm leading-body-sm h-[32px] min-w-[64px] px-600 py-300 gap-300"
  >
    <span
      class="flex-1"
    >
      Label
    </span>
  </button>
</div>
`;
